--- a/ByteCore.Web/Views/Shared/_Layout.cshtml
+++ b/ByteCore.Web/Views/Shared/_Layout.cshtml
@@ -14,11 +14,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="Content/assets/css/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="Content/assets/icon/themify-icons/themify-icons.css">
-    <link rel="stylesheet" type="text/css" href="Content/assets/icon/icofont/css/icofont.css">
-    <link rel="stylesheet" type="text/css" href="Content/assets/css/menu-search-component.css">
-    <link rel="stylesheet" type="text/css" href="Content/assets/css/jquery.mCustomScrollbar.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/assets/css/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/assets/icon/themify-icons/themify-icons.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/assets/icon/icofont/css/icofont.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/assets/css/menu-search-component.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/assets/css/jquery.mCustomScrollbar.css">
     @RenderSection("HeadContent", required: false)
 </head>
 <body class="d-flex flex-column h-100 bg-light">
